* Fix minor layout issues of demos

--- a/src/demo/EmptyClick/style.scss
+++ b/src/demo/EmptyClick/style.scss
@@ -4,20 +4,15 @@
   width: 150px;
   height: 150px;
   color: #ffffff;
-  background-color: #2222bb;
+  background-color: #2a7200;
   top: 150px;
-  left: 100px;
+  left: 20px;
 }
 
 #container {
   position: absolute;
   top: 150px;
-  left: 350px;
-}
-
-#openbtn {
-  padding: 5px;
-  background-color: #2a7200;
+  left: 200px;
 }
 
 .test-menu {
